--- a/ionic/platforms/android/res/values/strings.xml
+++ b/ionic/platforms/android/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">maps-clean</string>
+    <string name="app_name">Word On The Street</string>
     <string name="launcher_name">@string/app_name</string>
     <string name="activity_name">@string/launcher_name</string>
 </resources>
